--- a/scss/contacto.scss
+++ b/scss/contacto.scss
@@ -45,7 +45,7 @@
     font-weight: bold;
 
     &:hover {
-      background-color: #ff5080;
+      background-color: $color;
       color: #fff;
     }
   }
