--- a/scss/portofolio.scss
+++ b/scss/portofolio.scss
@@ -42,7 +42,7 @@
         position: absolute;
         left: 0;
         background-color: rgba(0, 0, 0, 0.8);
-        color: #ff5080;
+        color: $color;
         width: 100%;
         padding: 10px;
         opacity: 0;
