--- a/scss/fuente.scss
+++ b/scss/fuente.scss
@@ -14,7 +14,7 @@ html {
 
 #inicio {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1631&q=80);
+    url(https://images.unsplash.com/photo-1534972195531-d756b9bfa9f2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
   background-size: cover;
   background-position: center center;
   height: 100vh;
@@ -39,7 +39,7 @@ html {
 
         & h1 {
           text-align: center;
-          color: #ff5080;
+          color: $color;
         }
       }
 
@@ -57,7 +57,7 @@ html {
         }
 
         & a:hover {
-          color: #ff5080;
+          color: $color;
         }
       }
 
@@ -69,12 +69,12 @@ html {
         transition: 0.5s;
 
         &:hover {
-          color: #ff5080;
+          color: $color;
         }
       }
 
       & .seleccionado {
-        color: #ff5080;
+        color: $color;
       }
     }
   }
@@ -96,14 +96,19 @@ html {
       letter-spacing: 5px;
     }
 
+    & p{
+      color: $color-letra;
+    }
+
     & h2 {
       font-size: 55px;
       margin-bottom: 25px;
       text-align: center;
+      color: $color-letra;
 
       & span {
         font-size: 25px;
-        color: #ff5080;
+        color: $color;
       }
     }
 
@@ -127,7 +132,7 @@ html {
       transition: 0.5s;
 
       &:hover {
-        background-color: #ff5080;
+        background-color: $color;
       }
     }
   }
