--- a/scss/sobre-mi.scss
+++ b/scss/sobre-mi.scss
@@ -26,7 +26,7 @@
       text-transform: uppercase;
       color: #111135;
       text-decoration: underline;
-      text-decoration-color: #d3d3d3;
+      text-decoration-color: #DADADA;
       text-decoration-thickness: 3px;
     }
 
@@ -37,7 +37,7 @@
       letter-spacing: 2px;
 
       & span {
-        color: #ff5080;
+        color: $color;
       }
     }
 
@@ -67,7 +67,7 @@
       transition: 0.5s;
 
       &:hover {
-        background-color: #ff5080;
+        background-color: $color;
         color: #fff;
       }
     }
